[gd_scene load_steps=4 format=3 uid="uid://bdi532g6s6gqh"]

[ext_resource type="Texture2D" uid="uid://cn2ut788cm00t" path="res://Graphics/hexbolt.png" id="1_30od4"]
[ext_resource type="Script" path="res://Scripts/hexbolt.gd" id="1_paonk"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7240c"]
radius = 53.0
height = 190.0

[node name="Hexbolt" type="Area2D"]
scale = Vector2(0.05, 0.05)
collision_layer = 4
collision_mask = 3
script = ExtResource("1_paonk")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -50)
texture = ExtResource("1_30od4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-4, -55)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_7240c")

[node name="Timer" type="Timer" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
